Fixes double borders on grid box elements

--- a/styles.css
+++ b/styles.css
@@ -5,5 +5,14 @@
 
 .grid-box {
     width: 20px;
-    border: 1px solid rgba(0, 0, 0, 0.4);
+    border-top: 1px solid rgba(0, 0, 0, 0.5);
+    border-left: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+#last-row .grid-box {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.last-box {
+    border-right: 1px solid rgba(0, 0, 0, 0.5);
 }
